	       JSBML NEWS -- History of user-visible changes

======================================================================
Version 0.8-rc2 (xx-xx-2012)
======================================================================

* User visible changes :

  - Major improvements of the reading and writing speed for large models.

* Bug Fixes:

  - It was forgotten to implement an unsetSubstanceUnits method on the Model
    class. Thanks to Robert Byrnes for reporting this problem.
  
  - In the Reaction class, the setReversible method only accepted Boolean,
    no boolean.
  
  - Several bug fixes and improvements to units derivation, merging and
    simplifying.
    
  - There was a bug in KineticLaw that prevented a correct iteration
    through all child elements.
    
  - When cloning JSBML wrongly assigned the same 
    TreeNodeChangeListeners to the new data structure.
    
  - The clone methods were corrected to register properly all entities
  	with an id.
    
  - QuantityWithUnit did not fire update events when changing its value
    because of an incorrect comparison between the previous and the new
    value.
    
  - Corrected a bug that made it impossible to set a kinetic law with an 
    existing list of local parameters as the new kinetic law in a 
    different reaction.
    
  - Meike Aichele detected and fixed the problem that some Listeners were 
    set too soon in the Model class, so that no Event was detected.
  
  - One rdf namespace declaration was missing when creating an History 
    element from scratch.
     
  - [Tracker item #3511439] : Model.getSpeciesType(String) was 
    corrected and it's speed improved. Thanks to Thomas Bernard who noticed
    and reported the problem.
  
  - Annotation elements that are missing a proper namespace declaration will
    be correctly read and not considered as improper SBML elements.
  
  - [Tracker item #3487517] : If one empty rdf Bag element was present in an